bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>CLN-{000000}</displayFormat>
        <label>Contract Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>