bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Actual_Volume__c</fullName>
    <label>Actual Volume</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>