bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Date__c</fullName>
    <label>Amendment Date</label>
    <type>Date</type>
</CustomField>