bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Applicable_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Rebate__c</fullName>
    <label>Applicable Rebate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>