bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Id</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>