bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Category_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Category_Exclusivity__c</fullName>
    <label>Category Exclusivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>