bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>Contract_Volume__c</fullName>
    <label>Contract Volume</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>