bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Equipment_Ammendments__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Ammendments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Ammendments</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items (Equipment Ammendments)</relationshipLabel>
    <relationshipName>EquipmentAmmendments</relationshipName>
    <type>Lookup</type>
</CustomField>