bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Equipment_Line__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Line</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items (Equipment Line)</relationshipLabel>
    <relationshipName>EquipmentLine</relationshipName>
    <type>Lookup</type>
</CustomField>