bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Installing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Installing_Instructions__c</fullName>
    <label>Installing Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main corridor</fullName>
            </value>
            <value>
                <fullName>Front of the store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>