bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Investment_Ammendments__c.field-meta.xml
<CustomField>
    <fullName>Investment_Ammendments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Ammendments</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items (Investment Ammendments)</relationshipLabel>
    <relationshipName>InvestmentAmmendments</relationshipName>
    <type>Lookup</type>
</CustomField>