bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount__c</fullName>
    <label>Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>