bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Investment_Line__c.field-meta.xml
<CustomField>
    <fullName>Investment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Line</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items (Investment Line)</relationshipLabel>
    <relationshipName>InvestmentLine</relationshipName>
    <type>Lookup</type>
</CustomField>