bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Investment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Investment_Reason__c</fullName>
    <label>Investment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animation &amp; Commercial Operations</fullName>
            </value>
            <value>
                <fullName>Brand Visibility &amp; Menu Offering</fullName>
            </value>
            <value>
                <fullName>Point of Sale Branding</fullName>
            </value>
            <value>
                <fullName>Equipment &amp; POS Materials</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>