bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Located_In_Store__c.field-meta.xml
<CustomField>
    <fullName>Located_In_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Located In Store</label>
    <type>Checkbox</type>
</CustomField>