bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Product_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_External_Id__c</fullName>
    <label>Product External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>