bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Rebate_Ammendments__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Ammendments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rebate Ammendments</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items (Rebate Ammendments)</relationshipLabel>
    <relationshipName>RebateAmmendments</relationshipName>
    <type>Lookup</type>
</CustomField>