bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Rebate_Line__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rebate Line</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items (Rebate Line)</relationshipLabel>
    <relationshipName>RebateLine</relationshipName>
    <type>Lookup</type>
</CustomField>