bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Request_Reason__c</fullName>
    <label>Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Existing store</fullName>
            </value>
            <value>
                <fullName>Existing store, additional cooler</fullName>
            </value>
            <value>
                <fullName>New client</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Found Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>