bundled_metadata/force-app/main/default/objects/Contract_Line_Item__c/fields/Volume_UoM__c.field-meta.xml
<CustomField>
    <fullName>Volume_UoM__c</fullName>
    <label>Volume UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>